--- a/sites/main.html
+++ b/sites/main.html
@@ -50,26 +50,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/Cri images/main image.jpg" class="d-block w-100" alt="...">
+            <img src="https://placehold.co/600x400" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>cri 2022</h5>
               <p>our futur is here our futur is robots.</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="../assets/Cri images/old cri 2018.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>cri 2018</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/Cri images/cri 2021.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
+          
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
