--- a/sites/prod.html
+++ b/sites/prod.html
@@ -1,106 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product Details</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="prod.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product Details</title>
 
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">CRI</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="login.html">Account</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="RT.html">RT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Events</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="prod.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">CRI</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="login.html"
+                >Account</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="RT.html">RT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-md-6">
-        <img src="https://via.placeholder.com/400" class="img-fluid product-image" alt="Product Image">
-      </div>
-      <div class="col-md-6">
-        <h2>Product Name</h2>
-        <p class="lead">Product Description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec purus feugiat, molestie ipsum et, consequat nibh.</p>
-        <p>Available Quantity: XX</p>
-        <div class="input-group mb-3" style="max-width: 200px;">
-          <input type="number" class="form-control" placeholder="Quantity">
-          <button class="btn btn-primary" type="button">Add to Cart</button>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="https://via.placeholder.com/400"
+            class="img-fluid product-image"
+            alt="Product Image"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2>Product Name</h2>
+          <p class="lead">
+            Product Description Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Nulla nec purus feugiat, molestie ipsum et,
+            consequat nibh.
+          </p>
+          <p>Available Quantity: XX</p>
+          <div class="input-group mb-3" style="max-width: 200px">
+            <input type="number" class="form-control" placeholder="Quantity" />
+            <button class="btn btn-primary" type="button">Add to Cart</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Product List -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card product-card">
-          <img src="https://via.placeholder.com/300" class="card-img-top" alt="Product Image">
-          <div class="card-body">
-            <h5 class="card-title">Product 1</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="d-flex align-items-center">
-              <input type="number" class="form-control me-2" placeholder="0" style="width: 60px;">
-              <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card product-card">
+            <img
+              src="https://via.placeholder.com/300"
+              class="card-img-top"
+              alt="Product Image"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Product 1</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="d-flex align-items-center">
+                <input
+                  type="number"
+                  class="form-control me-2"
+                  placeholder="0"
+                  style="width: 60px"
+                />
+                <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card product-card">
+            <img
+              src="https://via.placeholder.com/300"
+              class="card-img-top"
+              alt="Product Image"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Product 2</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="d-flex align-items-center">
+                <input
+                  type="number"
+                  class="form-control me-2"
+                  placeholder="0"
+                  style="width: 60px"
+                />
+                <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card product-card">
+            <img
+              src="https://via.placeholder.com/300"
+              class="card-img-top"
+              alt="Product Image"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Product 3</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+              <div class="d-flex align-items-center">
+                <input
+                  type="number"
+                  class="form-control me-2"
+                  placeholder="0"
+                  style="width: 60px"
+                />
+                <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- Add more product cards here -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card product-card">
-          <img src="https://via.placeholder.com/300" class="card-img-top" alt="Product Image">
-          <div class="card-body">
-            <h5 class="card-title">Product 2</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="d-flex align-items-center">
-              <input type="number" class="form-control me-2" placeholder="0" style="width: 60px;">
-              <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Add more product cards here -->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <div class="card product-card">
-          <img src="https://via.placeholder.com/300" class="card-img-top" alt="Product Image">
-          <div class="card-body">
-            <h5 class="card-title">Product 3</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <div class="d-flex align-items-center">
-              <input type="number" class="form-control me-2" placeholder="0" style="width: 60px;">
-              <a href="#" class="btn btn-primary btn-sm">Buy Now</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Add more product cards here -->
     </div>
-  </div>
 
-  <!-- Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
