event page front done

--- a/sites/eventGroups.html
+++ b/sites/eventGroups.html
@@ -15,6 +15,11 @@
       src="https://kit.fontawesome.com/3c19f29c24.js"
       crossorigin="anonymous"
     ></script>
+    <style>
+      a {
+        text-decoration: none;
+      }
+    </style>
   </head>
 
   <body>
@@ -62,9 +67,10 @@
     </div>
 
     <br />
+    <a href="EventGroupPopUp.html">
 
-    <section class="container mt-3">
-      <div class="row">
+      <section class="container mt-3">
+        <div class="row">
         <div class="col-md-3 mb-4">
           <div class="event-block">
             <p class="event-text">Event Description</p>
@@ -75,20 +81,20 @@
                   src="https://via.placeholder.com/150"
                   class="img-fluid mb-2"
                   alt="Event Image"
+                  />
+                </div>
+                <div class="col-6">
+                <img
+                src="https://via.placeholder.com/150"
+                class="img-fluid mb-2"
+                alt="Event Image"
                 />
               </div>
               <div class="col-6">
                 <img
-                  src="https://via.placeholder.com/150"
-                  class="img-fluid mb-2"
-                  alt="Event Image"
-                />
-              </div>
-              <div class="col-6">
-                <img
-                  src="https://via.placeholder.com/150"
-                  class="img-fluid mb-2"
-                  alt="Event Image"
+                src="https://via.placeholder.com/150"
+                class="img-fluid mb-2"
+                alt="Event Image"
                 />
               </div>
               <div class="col-6">
@@ -104,7 +110,8 @@
         </div>
       </div>
     </section>
-
+  </a>
+    
     <br /><br /><br />
     <hr class="footer" />
     <footer class="container">
