--- a/sites/main.html
+++ b/sites/main.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="RT.html">RT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Events</a>
+              <a class="nav-link" href="event.html">Events</a>
             </li>
 
             <li class="nav-item">
