--- a/sites/eventGroups.html
+++ b/sites/eventGroups.html
@@ -51,10 +51,11 @@
               <a class="nav-link" href="RT.html">RT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Events</a>
+              <a class="nav-link" href="event.html">Events</a>
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -68,50 +69,49 @@
 
     <br />
     <a href="EventGroupPopUp.html">
-
       <section class="container mt-3">
         <div class="row">
-        <div class="col-md-3 mb-4">
-          <div class="event-block">
-            <p class="event-text">Event Description</p>
-            <br />
-            <div class="row">
-              <div class="col-6">
-                <img
-                  src="https://via.placeholder.com/150"
-                  class="img-fluid mb-2"
-                  alt="Event Image"
+          <div class="col-md-3 mb-4">
+            <div class="event-block">
+              <p class="event-text">Event Description</p>
+              <br />
+              <div class="row">
+                <div class="col-6">
+                  <img
+                    src="https://via.placeholder.com/150"
+                    class="img-fluid mb-2"
+                    alt="Event Image"
                   />
                 </div>
                 <div class="col-6">
-                <img
-                src="https://via.placeholder.com/150"
-                class="img-fluid mb-2"
-                alt="Event Image"
-                />
+                  <img
+                    src="https://via.placeholder.com/150"
+                    class="img-fluid mb-2"
+                    alt="Event Image"
+                  />
+                </div>
+                <div class="col-6">
+                  <img
+                    src="https://via.placeholder.com/150"
+                    class="img-fluid mb-2"
+                    alt="Event Image"
+                  />
+                </div>
+                <div class="col-6">
+                  <img
+                    src="https://via.placeholder.com/150"
+                    class="img-fluid mb-2"
+                    alt="Event Image"
+                  />
+                </div>
               </div>
-              <div class="col-6">
-                <img
-                src="https://via.placeholder.com/150"
-                class="img-fluid mb-2"
-                alt="Event Image"
-                />
-              </div>
-              <div class="col-6">
-                <img
-                  src="https://via.placeholder.com/150"
-                  class="img-fluid mb-2"
-                  alt="Event Image"
-                />
-              </div>
+              <button class="btn btn-primary btn-sm float-end">+</button>
             </div>
-            <button class="btn btn-primary btn-sm float-end">+</button>
           </div>
         </div>
-      </div>
-    </section>
-  </a>
-    
+      </section>
+    </a>
+
     <br /><br /><br />
     <hr class="footer" />
     <footer class="container">
