--- a/sites/contact.html
+++ b/sites/contact.html
@@ -1,69 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact - CRI</title>
-<link rel="stylesheet" href="eventGroup.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/3c19f29c24.js" crossorigin="anonymous"></script>
-<style>
-    hr{
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact - CRI</title>
+    <link rel="stylesheet" href="eventGroup.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/3c19f29c24.js"
+      crossorigin="anonymous"
+    ></script>
+    <style>
+      hr {
         margin-top: 300px;
-    }
+      }
 
-    nav{
-        margin-top: 150px;
-    }
-</style>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">CRI</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="login.html">Account</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="RT.html">RT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+      main {
+        margin-top: 100px;
+      }
 
-<div class="container mt-5">
-  <h2>Contact Us</h2>
-  <p>If you have any questions or inquiries, feel free to contact us using the information below:</p>
-  <ul>
-    <li><strong>Bechir Gara</strong> - President</li>
-    <li>Email: bechir.gara@cri.com</li>
-    <li>Phone: +1234567890</li>
-  </ul>
-  <ul>
-    <li><strong>Hamdi Tayeb</strong> - RT Manager</li>
-    <li>Email: hamdi.tayeb@cri.com</li>
-    <li>Phone: +0987654321</li>
-  </ul>
-</div>
+      a {
+        text-decoration: none;
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">CRI</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="login.html"
+                >Account</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="RT.html">RT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="event.html">Events</a>
+            </li>
 
-<hr class="footer">
-<footer class="container">
-  <p class="float-end"><a href="#">Back to top</a></p>
-  <p>&copy; 2012-2024 CRI website made by bouajilaProg. &middot; <a href="#">technical help</a> &middot; <a href="#">☏</a></p>
-</footer>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+    <main>
+      <div class="container mt-5">
+        <h2>Contact Us</h2>
+        <p>
+          If you have any questions or inquiries, feel free to contact us using
+          the information below:
+        </p>
+        <ul>
+          <li><strong>Bechir Gara</strong> - President</li>
+          <li>Email: bechir.gara@cri.com</li>
+          <li>Phone: +1234567890</li>
+        </ul>
+        <ul>
+          <li><strong>Hamdi Tayeb</strong> - RT Manager</li>
+          <li>Email: hamdi.tayeb@cri.com</li>
+          <li>Phone: +0987654321</li>
+        </ul>
+      </div>
+    </main>
+
+    <hr class="footer" />
+    <footer class="container">
+      <p class="float-end"><a href="#">Back to top</a></p>
+      <p>
+        &copy; 2012-2024 CRI website made by bouajilaProg. &middot;
+        <a href="#">technical help</a> &middot; <a href="#">☏</a>
+      </p>
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
