--- a/sites/main.html
+++ b/sites/main.html
@@ -50,7 +50,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
