--- a/sites/prod.html
+++ b/sites/prod.html
@@ -40,10 +40,11 @@
               <a class="nav-link" href="RT.html">RT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Events</a>
+              <a class="nav-link" href="event.html">Events</a>
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
