--- a/sites/eventGroups.html
+++ b/sites/eventGroups.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">CRI</a>
+        <a class="navbar-brand" href="main.html">CRI</a>
         <button
           class="navbar-toggler"
           type="button"
