fixed main link

--- a/sites/event.html
+++ b/sites/event.html
@@ -31,7 +31,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
+        <div  
           class="collapse navbar-collapse justify-content-end"
           id="navbarSupportedContent"
         >
@@ -56,11 +56,10 @@
       </div>
     </nav>
 
-    <div class="container mt-3">
-      <h2 class="text-center">Events Proposed</h2>
-    </div>
-
+    
+    <br><br><br>
     <section class="container mt-3 mb-3">
+      <h2 class="">Events Proposed</h2>
       <div class="row">
         <div class="col">
           <form action="">
