--- a/sites/prod.html
+++ b/sites/prod.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Details</title>
 
+    <script
+    src="https://kit.fontawesome.com/3c19f29c24.js"
+    crossorigin="anonymous"
+  ></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -51,7 +56,15 @@
       </div>
     </nav>
 
+
+    
     <div class="container mt-5">
+      <button onclick="goBack()" class="btn btn-secondary btn-sm mb-3 ">
+        <i class="fas fa-arrow-left"></i> Back
+      </button>
+      <button class="btn btn-secondary btn-sm mb-3 ">
+        <i class="fa-solid fa-receipt"></i> command
+      </button>
       <div class="row">
         <div class="col-md-6">
           <img
@@ -154,7 +167,11 @@
         </div>
       </div>
     </div>
-
+    <script>
+      function goBack() {
+        window.history.back();
+      }
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
